Fixed vertical align issue on wedding party with small browser windows.

--- a/NickAndKatieWedding/Content/app.css
+++ b/NickAndKatieWedding/Content/app.css
@@ -653,6 +653,7 @@ aside {
     .col-sm-height {
         display: table-cell;
         float: none;
+        vertical-align: top;
     }
 }
 
